--- a/v2_gpt.html
+++ b/v2_gpt.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Future Career Blueprint | Levtech Direct デモ</title>
+  <title>Future Career Blueprint | LTD デモ</title>
 
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -107,7 +107,7 @@
           <i class="fa-solid fa-bolt text-white"></i>
         </div>
         <div>
-          <div class="font-black tracking-tight leading-tight">Levtech Direct</div>
+          <div class="font-black tracking-tight leading-tight">LTD</div>
           <div class="text-xs text-slate-500 -mt-0.5">Future Career Blueprint（未来のキャリア設計図）</div>
         </div>
       </div>
@@ -145,13 +145,13 @@
           </div>
 
           <h1 class="mt-4 text-3xl md:text-5xl font-black tracking-tight leading-tight">
-            あなたのキャリアは、<br/>
-            <span class="text-cyan">ここから加速する。</span>
+            あなたのキャリアの未来を、<br/>
+            <span class="text-cyan">少し除いてみましょう。</span>
           </h1>
 
           <p class="mt-4 text-white/80 leading-relaxed">
             「年収」「役割」「商流」「技術」「希少性」。<br class="hidden sm:block"/>
-            次の一手を、“求人”ではなく <span class="font-extrabold text-premium">経験</span>から逆算して提示します。
+            とるべき行動を、<span class="font-extrabold text-premium">客観的データ</span>から逆算して提示します。
           </p>
 
           <!-- Salary cards -->
@@ -162,31 +162,19 @@
               </div>
               <div class="mt-2 text-3xl font-black tracking-tight">550〜650<span class="text-base font-bold">万</span></div>
               <div class="mt-2 text-xs text-white/70">
-                バックエンド5年 / 受託中心 / 設計権限が限定
+                バックエンド5年 / 受託中心 / 設計権限が限定的
               </div>
             </div>
 
             <div class="rounded-2xl bg-white/10 border border-premium/40 p-5 shadow-gold gold-ring">
               <div class="text-sm font-extrabold text-white/85 flex items-center gap-2">
-                <i class="fa-solid fa-crown text-premium"></i> 理想の未来
+                <i class="fa-solid fa-crown text-premium"></i> 理想の〇〇年後
               </div>
               <div class="mt-2 text-4xl font-black tracking-tight text-premium">1000〜1200<span class="text-base font-bold text-white/85">万</span></div>
               <div class="mt-2 text-xs text-white/70">
                 自社開発 × 技術選定 × リード/EM で市場価値を最大化
               </div>
             </div>
-          </div>
-
-          <div class="mt-6 flex flex-wrap gap-2 text-xs font-bold">
-            <span class="px-3 py-1.5 rounded-full bg-white/10 border border-white/15">
-              <i class="fa-solid fa-shield-halved text-cyan mr-1"></i> 信頼できる提案根拠
-            </span>
-            <span class="px-3 py-1.5 rounded-full bg-white/10 border border-white/15">
-              <i class="fa-solid fa-sparkles text-premium mr-1"></i> 未来の選択肢を可視化
-            </span>
-            <span class="px-3 py-1.5 rounded-full bg-white/10 border border-white/15">
-              <i class="fa-solid fa-route text-white mr-1"></i> 最短ルートを設計
-            </span>
           </div>
         </div>
 
@@ -195,9 +183,9 @@
           <div class="rounded-3xl bg-white/8 border border-white/15 p-5 md:p-6 shadow-glow">
             <div class="flex items-start justify-between gap-4">
               <div>
-                <div class="text-sm font-extrabold text-white/85">ギャップ可視化（5軸）</div>
+                <div class="text-sm font-extrabold text-white/85">理想とのギャップ</div>
                 <div class="text-xs text-white/70 mt-1">
-                  「現在（青）」と「理想（ゴールド）」の差分から、埋めるべき“経験”を抽出
+                  「現在（青）」と「理想（ゴールド）」の差分から、埋めるべき“差分”を抽出
                 </div>
               </div>
               <div class="flex items-center gap-3 text-xs font-bold">
@@ -213,7 +201,7 @@
             <div class="mt-4 grid sm:grid-cols-2 gap-3 text-xs">
               <div class="rounded-xl bg-white/6 border border-white/10 p-3">
                 <div class="font-extrabold text-white/85 flex items-center gap-2">
-                  <i class="fa-solid fa-magnifying-glass text-cyan"></i> 主要ギャップ
+                  <i class="fa-solid fa-magnifying-glass text-cyan"></i> 主な差分
                 </div>
                 <ul class="mt-2 space-y-1 text-white/75">
                   <li>• 技術選定・設計の意思決定</li>
@@ -240,7 +228,7 @@
               </button>
               <button id="btnStep2"
                 class="px-4 py-2 rounded-xl bg-white/10 border border-white/20 font-extrabold hover:bg-white/15 transition">
-                <i class="fa-solid fa-code-branch mr-2"></i> 未来比較へ
+                <i class="fa-solid fa-code-branch mr-2"></i> 未来の可能性をみる
               </button>
             </div>
           </div>
@@ -258,7 +246,7 @@
             <div class="text-sm font-extrabold text-trust">Missing Links</div>
             <h2 class="mt-2 text-2xl md:text-3xl font-black tracking-tight">理想に到達するために足りない3つの要素</h2>
             <p class="mt-3 text-slate-600 leading-relaxed">
-              “やること”ではなく <span class="font-extrabold text-slate-900">獲得すべき経験</span>に翻訳して提示します。
+              <span class="font-extrabold text-slate-900">獲得すべき経験</span>
             </p>
           </div>
           <div class="hidden md:flex items-center gap-2 text-xs font-bold text-slate-500">
